--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-protobuf>=3.19,<5.0
-langchain
-chromadb
-openai
-pandas
-matplotlib
-google-generativeai
+langchain==0.3.3
+langchain_community==0.3.2
+langchain_core==0.3.10
+langchain_google_genai==2.0.1
+pandas==2.2.3
+pydantic==2.9.2
